# TIL

./: .gitignore  1003.py  1058.py  10655.py  10815.py  11053.py  1138.py  11399.py  1149.py  11726.py  1189.py  1260.py  12933.py  1463.py  14889.py  1541.py  15650.py  1620.py  16924.py  17219.py  17276.py  18870.py  1912.py  1927.py  1931.py  2149.py  21736.py  240213(programmers).py  2503.py  2606.py  2667.py  276034.sql  2775.py  2805.py  67256(programmers).py  9095.py  9375.py  9465.py  9519.py  README.md  (+6 more)
AI/AI Data Maker/: Slice_MP3.ipynb
Algorithm/: 2022101483_최지웅_test1.py  code.js  code.py  code2.py  code_v2.py  code_v3.py
Algorithm/스카이 라인/: code.py  code_v2.py
Algorithm/학교/: 2022101483_최지웅.py  (+1 more)
App/: 2022101483_최지웅_test1.py
App/Diabetes_classifier/: diabetes_classifier.py  pyproject.toml
App/Diabetes_classifier/static/: data.csv  diabetes_model.pkl  diabetes_questions.txt  gamble_model.pkl  gamble_questions.txt
CodingTest/: 1003.py  1012.py  1058.py  10655.py  10815.py  11053.py  1138.py  11399.py  1149.py  11723.py  11724.py  11726.py  11727.py  1189.py  1260.py  12933.py  14567.py  14719.py  14888.py  14889.py  1541.py  15649.py  15650.py  15657.py  15666.py  15787.py  1620.py  16924.py  16935.py  1697.py  17219.py  17276.py  1743.py  17485.py  18870.py  1912.py  1927.py  1929.py  1931.py  1932.py  (+25 more)
Git/: README.md
Math/: solve.md  극한 공식.md  다변수함수.md  로피탈 정리.md  미분.md  별의별 함수.md  선적분.md  수열의 합.md  실수.md  역함수.md  우함수 기함수.md  초월 함수 공식.md  행렬.md
Network/: client.py  pyproject.toml  server.ipynb  server.py
Network/Pyqt6/youtube_downloader/: README.md  main.py  util.py
Network/Pyqt6/youtube_downloader/youtube/: rtest.html
SQL/: README.md
Spring FrameWork/: DI란.md  README.md
WEB/: README.md
(+359 files in other folders)
