[tool.poetry]
name = "enet"
version = "0.1.0"
description = ""
authors = ["creepereye <creepereye1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
toga = "^0.5.0"
requests = "^2.32.3"
pystray = "^0.19.5"
pillow = "^11.1.0"
pyqt6 = "^6.8.1"
numba = "^0.61.0"
yt-dlp = "^2025.2.19"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
