[tool.poetry]
name = "seminar proejcts"
version = "0.1.0"
description = "세미나 프로젝트"
authors = ["Choi Ji Woong <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
